# Cve

./: .env.example  .env.production.example  .gitignore  BUILD.md  DEPLOY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
adr/: 0001-rules-first-policy.md  0002-poc-itw-signal-separation.md  0003-fail-closed-auditability.md  0004-ai-advisory-only.md  0005-phase0-python-fastapi-postgres-rq-stack.md  README.md
architecture/: README.md  system-overview.md
fixtures/: README.md  mandatory-scenarios.yaml
metrics/: README.md  kpis.md  phase5-operational-signals.md  phase6-live-ingestion-signals.md  slo-alerts.md
migrations/: env.py
migrations/versions/: 0001_phase0_foundation.py  0002_phase1_ingestion_foundation.py  0003_phase1_snapshot_lineage.py  0004_phase1_classification_snapshot_link.py  0005_phase2_evidence_metadata.py  0006_phase3_workflow_state_and_idempotency.py  0007_phase4_publication_pipeline.py  0008_phase4_policy_durability.py  0009_phase5_update_candidates.py  0010_phase5_update_publication_lineage.py  0011_phase5_operational_metrics.py  0012_phase5_operational_alerts.py  0013_phase6_source_progress.py  0014_phase7_external_enrichment.py
runbooks/: README.md  autonomous-production.md  ingestion-failure.md  publish-failure.md  source-poisoning-response.md
schemas/: README.md  ai-review-request.schema.json  ai-review-response.schema.json  context-package.schema.json  decision-event.schema.json
src/cve_service/: __init__.py  main.py  runtime.py
systemd/: README.md  cve-alert-eval.service  cve-alert-eval.timer  cve-api.service  cve-ingest-poll.service  cve-ingest-poll.timer  cve-stale-refresh.service  cve-stale-refresh.timer  cve-worker.service
tests/: conftest.py
tests/integration/: test_ai_policy.py  test_enrichment.py  test_health.py  test_ingestion.py  test_live_ingestion.py  test_migrations.py  test_phase5_alerting.py  test_phase5_auto_enqueue.py  test_phase5_observability.py  test_publication.py  test_publish_worker.py  test_update_candidates.py  test_update_publication.py  test_worker.py  test_x_publication.py
tests/unit/: test_ai_provider.py  test_ai_review.py  test_classifier.py  (+12 more)
(+35 files in other folders)
