[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cve-service"
version = "0.1.0"
description = "Phase 0 foundation for the CVE Intelligence Bot Mk2."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "redis>=5.1,<6.0",
  "rq>=1.16,<2.0",
  "sqlalchemy>=2.0.35,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
]

[project.scripts]
cve-api = "cve_service.main:run"
cve-worker = "cve_service.workers.worker:run_worker"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

